--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,53 +1,91 @@
-<nav class="navbar navbar-default navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a routerLink="/" class="navbar-brand"
-        ><i class="fa-solid fa-utensils"></i> Chef's Specials
-      </a>
-    </div>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Chef's Specials</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+    <link rel="stylesheet" href="header.component.css" />
+    <!-- Link to the external CSS file -->
+  </head>
+  <body>
+    <nav class="navbar navbar-default navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a routerLink="/" class="navbar-brand">
+            <i class="fa-solid fa-utensils"></i> Chef's Specials
+          </a>
+        </div>
 
-    <div class="collapse navbar-collapse">
-      <ul class="nav navbar-nav">
-        <li routerLinkActive="active" *ngIf="isAuthenticated">
-          <a routerLink="/recipes"> <i class="fas fa-bars"></i> Menu </a>
-        </li>
-        <li routerLinkActive="active" *ngIf="!isAuthenticated">
-          <a routerLink="/auth">
-            <i class="fas fa-sign-in-alt"></i> Authentication</a
-          >
-        </li>
-
-        <li routerLinkActive="active">
-          <a routerLink="/shopping-list">
-            <i class="fas fa-shopping-cart"></i> Shopping Cart</a
-          >
-        </li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li *ngIf="isAuthenticated">
-          <a style="cursor: pointer" (click)="onLogout()">
-            <i class="fas fa-sign-out-alt"></i> Logout</a
-          >
-        </li>
-        <li class="dropdown" appDropdown *ngIf="isAuthenticated">
-          <a style="cursor: pointer" class="dropdown-toggle" role="button">
-            <i class="fas fa-cogs"></i>
-            Manage ></a
-          >
-          <ul class="dropdown-menu">
-            <li>
-              <a style="cursor: pointer" (click)="onSaveData()">
-                <i class="fas fa-save"></i> Save Data</a
+        <div class="collapse navbar-collapse">
+          <!-- Left-aligned navbar items -->
+          <ul class="nav navbar-nav">
+            <li routerLinkActive="active" *ngIf="isAuthenticated">
+              <a
+                routerLink="/recipes"
+                style="color: white; font-weight: lighter"
               >
+                <i class="fas fa-bars"></i> Menu
+              </a>
             </li>
-            <li>
-              <a style="cursor: pointer" (click)="onFetchData()"
-                ><i class="fas fa-cloud-download-alt"></i> Fetch Data</a
+            <li routerLinkActive="active" *ngIf="!isAuthenticated">
+              <a routerLink="/auth" style="color: white; font-weight: lighter">
+                <i class="fas fa-sign-in-alt"></i> Authentication
+              </a>
+            </li>
+            <li routerLinkActive="active">
+              <a
+                routerLink="/shopping-list"
+                style="color: white; font-weight: lighter"
               >
+                <i class="fas fa-shopping-cart"></i> Shopping Cart
+              </a>
             </li>
           </ul>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
+
+          <!-- Right-aligned navbar items -->
+          <ul class="nav navbar-nav navbar-right">
+            <li *ngIf="isAuthenticated">
+              <a
+                style="cursor: pointer; color: white; font-weight: lighter"
+                (click)="onLogout()"
+              >
+                <i class="fas fa-sign-out-alt"></i> Logout
+              </a>
+            </li>
+            <li class="dropdown" appDropdown *ngIf="isAuthenticated">
+              <a
+                style="cursor: pointer; color: white; font-weight: lighter"
+                class="dropdown-toggle"
+                role="button"
+              >
+                <i class="fas fa-cogs"></i> Manage
+              </a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a
+                    style="cursor: pointer; color: white"
+                    (click)="onSaveData()"
+                  >
+                    <i class="fas fa-save"></i> Save Data
+                  </a>
+                </li>
+                <li>
+                  <a
+                    style="cursor: pointer; color: white"
+                    (click)="onFetchData()"
+                  >
+                    <i class="fas fa-cloud-download-alt"></i> Fetch Data
+                  </a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </body>
+</html>
