--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,16 +1,24 @@
 <div class="row">
   <div class="col-xs-12">
-    <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
-      <div class="row">
-        <div class="col-xs-12">
+    <form
+      [formGroup]="recipeForm"
+      (ngSubmit)="onSubmit()"
+      class="form-container"
+    >
+      <div class="row mb-3">
+        <div class="col-xs-12 text-center">
           <button
             type="submit"
-            class="btn btn-success"
+            class="btn btn-primary btn-lg shadow-sm"
             [disabled]="!recipeForm.valid"
           >
             Save
           </button>
-          <button type="button" class="btn btn-danger" (click)="onCancel()">
+          <button
+            type="button"
+            class="btn btn-secondary btn-lg shadow-sm"
+            (click)="onCancel()"
+          >
             Cancel
           </button>
         </div>
@@ -18,12 +26,12 @@
       <div class="row">
         <div class="col-xs-12">
           <div class="form-group">
-            <label for="name">Name</label>
+            <label for="name" class="form-label">Name</label>
             <input
               type="text"
               id="name"
               formControlName="name"
-              class="form-control"
+              class="form-control form-control-lg input-rounded"
             />
           </div>
         </div>
@@ -31,30 +39,33 @@
       <div class="row">
         <div class="col-xs-12">
           <div class="form-group">
-            <label for="imagePath">Image URL</label>
+            <label for="imagePath" class="form-label">Image URL</label>
             <input
               type="text"
               id="imagePath"
               formControlName="imagePath"
-              class="form-control"
+              class="form-control form-control-lg input-rounded"
               #imagePath
             />
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-xs-12">
-          <img [src]="imagePath.value" class="img-responsive" />
+      <div class="row mb-3">
+        <div class="col-xs-12 text-center">
+          <img
+            [src]="imagePath.value"
+            class="img-responsive img-preview rounded shadow-sm"
+          />
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
           <div class="form-group">
-            <label for="description">Description</label>
+            <label for="description" class="form-label">Description</label>
             <textarea
               type="text"
               id="description"
-              class="form-control"
+              class="form-control form-control-lg input-rounded"
               formControlName="description"
               rows="6"
             ></textarea>
@@ -64,47 +75,56 @@
       <div class="row">
         <div class="col-xs-12" formArrayName="ingredients">
           <div
-            class="row"
+            class="row align-items-end ingredient-group"
             *ngFor="let ingredientCtrl of getIngredientsArray(); let i = index"
             [formGroupName]="i"
-            style="margin-top: 10px"
           >
-            <div class="col-xs-6">
-              <label for="name">Ingredient Name</label>
-              <input type="text" class="form-control" formControlName="name" />
+            <div class="col-xs-4">
+              <div class="form-group">
+                <label for="name" class="form-label">Ingredient Name</label>
+                <input
+                  type="text"
+                  class="form-control form-control-lg input-rounded"
+                  formControlName="name"
+                />
+              </div>
             </div>
             <div class="col-xs-2">
-              <label for="amount">Amount</label>
-              <input
-                type="number"
-                class="form-control"
-                formControlName="amount"
-              />
+              <div class="form-group">
+                <label for="amount" class="form-label">Amount</label>
+                <input
+                  type="number"
+                  class="form-control form-control-lg input-rounded"
+                  formControlName="amount"
+                />
+              </div>
             </div>
             <div class="col-xs-2">
-              <label for="price">Price</label>
-              <input
-                type="number"
-                class="form-control"
-                formControlName="price"
-              />
+              <div class="form-group">
+                <label for="price" class="form-label">Price</label>
+                <input
+                  type="number"
+                  class="form-control form-control-lg input-rounded"
+                  formControlName="price"
+                />
+              </div>
             </div>
-            <div class="col-xs-2">
+            <div class="col-xs-2 text-center">
               <button
                 type="button"
-                class="btn btn-danger"
+                class="btn btn-danger btn-lg shadow-sm"
                 (click)="onDeleteIngredient(i)"
               >
-                X
+                Remove
               </button>
             </div>
           </div>
           <hr />
           <div class="row">
-            <div class="col-xs-12">
+            <div class="col-xs-12 text-center">
               <button
                 type="button"
-                class="btn btn-success"
+                class="btn btn-success btn-lg shadow-sm"
                 (click)="onAddIngredient()"
               >
                 Add Ingredient
