--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,25 +1,17 @@
 <a
-  style="
-    cursor: pointer;
-    margin-bottom: 20px;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    transition: box-shadow 0.3s ease-in-out;
-  "
   [routerLink]="[index]"
   routerLinkActive="active"
-  class="list-group-item clearfix"
+  class="list-group-item clearfix recipe-link shadow-sm"
 >
-  <div class="pull-left">
-    <h4 class="list-group-item-heading">{{ recipe.name }}</h4>
-    <p class="list-group-item-text">{{ recipe.description }}</p>
+  <div class="recipe-info">
+    <h4 class="recipe-title">{{ recipe.name }}</h4>
+    <p class="recipe-description">{{ recipe.description }}</p>
   </div>
-  <span class="pull-right">
+  <span class="recipe-image">
     <img
       [src]="recipe.imagePath"
       alt="{{ recipe.name }}"
       class="img-responsive"
-      style="max-height: 50px"
     />
   </span>
 </a>
