--- a/src/app/recipes/recipe-start/recipe-start.component.html
+++ b/src/app/recipes/recipe-start/recipe-start.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-md-6">
-      <div class="recipe-info-card">
+      <div class="recipe-info-card shadow-lg">
         <h4 class="recipe-info-heading">Please select a Recipe!</h4>
         <p class="recipe-info-text">
           Explore my delicious recipes and choose one to get started.
