--- a/src/app/shopping-list/checkout/checkout.component.html
+++ b/src/app/shopping-list/checkout/checkout.component.html
@@ -1,15 +1,15 @@
 <div class="container mt-5">
   <div class="row">
     <div class="col-12">
-      <h2>Hello, {{ userName | uppercase }}</h2>
+      <h2 class="greeting">Hello, {{ userName | uppercase }}</h2>
     </div>
   </div>
   <div class="row">
     <div class="col-10">
-      <hr />
-      <ul class="list-group">
+      <hr class="custom-hr" />
+      <ul class="list-group ingredient-list">
         <a
-          class="list-group-item d-flex justify-content-between align-items-center"
+          class="list-group-item d-flex justify-content-between align-items-center ingredient-item shadow-sm"
           *ngFor="let ingredient of ingredients; let i = index"
         >
           <div>
@@ -19,7 +19,8 @@
       </ul>
 
       <!-- Payment Options -->
-      <div class="mt-4">
+      <div class="mt-4 payment-options">
+        <h5 class="mb-3">Select Payment Method</h5>
         <div class="form-check form-check-inline">
           <input
             type="radio"
@@ -57,14 +58,14 @@
       </div>
 
       <!-- Payment Form -->
-      <div class="mt-4">
+      <div class="mt-4 payment-form">
         <h5 class="mb-3">Payment Details</h5>
         <form>
           <div class="form-group">
             <label for="cardNumber">Card Number</label>
             <input
               type="text"
-              class="form-control"
+              class="form-control input-rounded"
               id="cardNumber"
               placeholder="1234 5678 9012 3456"
               maxlength="16"
@@ -75,7 +76,7 @@
               <label for="expirationDate">Expiration Date</label>
               <input
                 type="text"
-                class="form-control"
+                class="form-control input-rounded"
                 id="expirationDate"
                 placeholder="MM/YY"
                 maxlength="5"
@@ -85,7 +86,7 @@
               <label for="cvv">CVV</label>
               <input
                 type="text"
-                class="form-control"
+                class="form-control input-rounded"
                 id="cvv"
                 placeholder="123"
                 maxlength="3"
@@ -96,9 +97,12 @@
       </div>
 
       <!-- Checkout Section -->
-      <div class="mt-4">
-        <h4>Total: {{ onCalculateTotal() }} ＄</h4>
-        <button class="btn btn-success">Pay now!</button>
+      <div class="mt-4 checkout-section shadow-sm">
+        <!-- Checkout Section -->
+        <div class="mt-4 checkout-section shadow-sm">
+          <h4 class="total-amount">Total: {{ onCalculateTotal() }} ＄</h4>
+          <button class="btn btn-checkout btn-lg">Pay now!</button>
+        </div>
       </div>
     </div>
   </div>
